# rss-swipr

./: .gitignore  .mise.toml  CHANGES.md  README.md  app.py  pyproject.toml  requirements.txt  rss-feeds-cleaned.csv  rss-feeds.opml  show_urls.sh  start.sh  top_articles.py
ml/: __init__.py  feature_engineering.py
ml/models/uploads/: 20260122_195629_hybrid_rf.pkl
notebooks/: retrain_model.ipynb
src/: __init__.py  feed_manager.py  model_manager.py  og_fetcher.py  rss_fetcher.py  tracking_db.py
static/: app.js  settings.js  style.css
templates/: index.html
